--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="wrapper">
+    <div class="photo">
+      <img src="images/phones.png" alt="phones" class="phones">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="content">
+      <div class="text-top">
+        <img src="images/brand.png" alt="logo" class="logo">
+        <a href="#" class="button"> <img src="images/home.png" alt="home"> <span>log in</span></a>
+      </div>
+      <div class="text">
+        <h2>Capture and Share <br>the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="apple" class="badge">
+        <img src="images/badge-android.png" alt="android" class="badge">
+      </div>
+    </div>
+    <div class="clearfloat"></div>
+  </div>
+  
+  <nav>
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      &copy; 2014 Instagram
+    </nav>
 </body>
 </html>
