--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,34 +2,37 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <!--Blue Gradient-->
-  <section></section>
+  <section class="blue-gradient"></section>
   <!--main Section-->
-  <section>
-    <article>
-      <img src="" alt="">
+  <section class="main">
+    <div class="overlap">
+    <article class="float col-2" style="width:40%">
+      <img src="images/phones.png" alt="iphones">
     </article>
-    <article>
+    <article class="float col-2" style="width:60%">
       <div>
-        <img src="" alt="">
-        <h1>Instagram</h1>
-        <button></button>
+        <img style="margin-bottom:20px;" src="images/brand.png" alt="instagram logo">
+        <a class="login" href="#" style="float:right;"> <img  src="images/home.png" alt="">  Log In</a>
       </div>
       <!--Card-->
-      <div>
-        <h3> Capture and Share the World's Moments</h3>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <div class="card">
+        <h3> Capture and Share <br> the World's Moments</h3>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
       </div>
-      <div>
-        <a href="">Download on the App Store</a>
-        <a href="">Get it on Google Play</a>
+      <div class="download-btn">
+        <a style="margin-right:20px;" href=""><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+        <a href=""><img src="images/badge-android.png" alt="Get it on Google Play"></a>
       </div>
     </article>
+  </div>
   </section>
+  <div class="clearfix"></div>
   <!--Footer-->
   <footer>
     <nav>
