DD DE Day 2 Jhon Scarzo

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <title>CSS Instagram Clone</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="degrade"></div>
+  <div class="afterBlock">
+<img class="left-img-float" src="images/phones.png">
+  <section class="left-text-float">
+    <div class="ig-head-align">
+    <div>
+  <a href="#"><img class="ig-logo" src="images/brand.png" alt="Instagram"></a>
+</div>
+  <div>
+  <a class="button-format" href="#"><img src="images/home.png"> Log in</a>
+    </div>
+  </div>
+  <p class="float-clear"></p>
+  <div>
+    <img class="text-background" src="images/frame.png">
+  </div>
+    <div class="text-block">
+  <h2 class="dark-blue-text">Capture and Share<br>the World's Moments</h2>
 
-  Capture and Share the World's Moments
+  <p class="text-pad">Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p class="text-pad">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <p class="text-pad">Oh yeah, did we mention it's free?</p>
+   </div>
+   <p class="float-clear"></p>
+<div class="dl-positioner">
+  <img class="dl-floats" src="images/badge-iphone.png" alt="Download on the App Store">
+  <img class="dl-floats" src="images/badge-android.png" alt="Get it on Google Play">
+</div>
+  </section>
+</div>
+<div class="float-clear"></div>
+<footer class="footer-format">
+  <a class="footer-text" href="#">About Us</a>
+  <a class="footer-text" href="#">Support</a>
+  <a class="footer-text" href="#">Blog</a>
+  <a class="footer-text" href="#">Press</a>
+  <a class="footer-text" href="#">API</a>
+  <a class="footer-text" href="#">Jobs</a>
+  <a class="footer-text" href="#">Privacy</a>
+  <a class="footer-text" href="#">Terms</a>
+  <a class="footer-text" href="#">&copy; 2k14 Instagram</a>
+</footer>
 </body>
 </html>
