--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,41 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="fondo">
+    <img class="top-img" src="images/brand.png" alt="Instagram">
+    <button>
+    <img src="images/home.png" alt="home">
+    <span>Log in</span>
+  </button>
+  <img class= "img-phones"src="images/phones.png" alt="phones">
+<div class="contenido">
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <h2>Capture and Share <br>the World's Moments</h2>
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+<br>
+  <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<br>
+  <br>Oh yeah, did we mention it's free?</p>
+<br>
+<img src="images/badge-iphone.png" alt="badge-iphone">
+<img src="images/badge-android.png" alt="badge-android">
+</div>
+</div>
+<div class="footer">
+  <ul>
+    <li> <a href="#">About Us</a></li>
+    <li> <a href="#">Support</a></li>
+    <li> <a href="#">Blog</a></li>
+    <li> <a href="#">Press</a></li>
+    <li> <a href="#">API</a></li>
+    <li> <a href="#">Jobs</a></li>
+    <li> <a href="#">Privacy</a></li>
+    <li> <a href="#">Terms</a></li>
+  <li><span>&copy; 2014 Instagram</span></li>
+</ul>
+</div>
 </body>
 </html>
