--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<section class="background-top">
+</section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<section class="container">
+  <div class="phones">
+    <img src="images/phones.png" alt="Phones">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="content-top">
+    <img src="images/brand.png" alt="Logo">
+    <button><i class="fas fa-home"></i>Log in</button>
+  </div>
+  
 
-  Oh yeah, did we mention it's free?
+  <div class="content">
+      <h2>Capture and Share <br/> the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <img src="images/badge-iphone.png" alt="App Store">
+          <img src="images/badge-android.png" alt="Android">
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  
+</section>
+ <footer>
+<nav>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li> <span>&copy; 2014 Instagram</span></li>
+    </ul>
+  </nav>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</footer>
 
-  &copy; 2014 Instagram
 </body>
 </html>
