--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,10 +11,10 @@
   <section class="left-text-float">
     <div class="ig-head-align">
     <div>
-  <a href="#"><img class="ig-logo" src="images/brand.png" alt="Instagram"></a>
+  <a href="https://www.instagram.com/"><img class="ig-logo" src="images/brand.png" alt="Instagram"></a>
 </div>
   <div>
-  <a class="button-format" href="#"><img src="images/home.png"> Log in</a>
+  <a class="button-format" href="https://www.instagram.com/accounts/login/"><img src="images/home.png"> Log in</a>
     </div>
   </div>
   <p class="float-clear"></p>
@@ -32,22 +32,22 @@
    </div>
    <p class="float-clear"></p>
 <div class="dl-positioner">
-  <img class="dl-floats" src="images/badge-iphone.png" alt="Download on the App Store">
-  <img class="dl-floats" src="images/badge-android.png" alt="Get it on Google Play">
+  <a href="https://itunes.apple.com/us/app/instagram/id389801252?mt=8"><img class="dl-floats" src="images/badge-iphone.png" alt="Download on the App Store"></a>
+  <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en"><img class="dl-floats" src="images/badge-android.png" alt="Get it on Google Play"></a>
 </div>
   </section>
 </div>
 <div class="float-clear"></div>
 <footer class="footer-format">
-  <a class="footer-text" href="#">About Us</a>
-  <a class="footer-text" href="#">Support</a>
-  <a class="footer-text" href="#">Blog</a>
-  <a class="footer-text" href="#">Press</a>
-  <a class="footer-text" href="#">API</a>
-  <a class="footer-text" href="#">Jobs</a>
-  <a class="footer-text" href="#">Privacy</a>
-  <a class="footer-text" href="#">Terms</a>
-  <a class="footer-text" href="#">&copy; 2k14 Instagram</a>
+  <a class="footer-text" href="https://www.instagram.com/about/us/">About Us</a>
+  <a class="footer-text" href="https://help.instagram.com/">Support</a>
+  <a class="footer-text" href="https://blog.instagram.com/">Blog</a>
+  <a class="footer-text" href="https://instagram-press.com/">Press</a>
+  <a class="footer-text" href="https://www.instagram.com/developer/">API</a>
+  <a class="footer-text" href="https://www.instagram.com/about/jobs/">Jobs</a>
+  <a class="footer-text" href="https://www.instagram.com/legal/privacy/">Privacy</a>
+  <a class="footer-text" href="https://www.instagram.com/legal/terms/">Terms</a>
+  <a class="footer-text">&copy; 2k14 Instagram</a>
 </footer>
 </body>
 </html>
