--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -35,6 +35,7 @@
   <div class="clearfix"></div>
   <!--Footer-->
   <footer>
+    <div class="footer-box">
     <nav>
       <ul>
         <li>About Us</li>
@@ -45,9 +46,10 @@
         <li>Jobs</li>
         <li>Privacy</li>
         <li>Terms</li>
+        <li><span class="copyright">&copy; 2014 Instagram</span> </li>
       </ul>
     </nav>
-    <p>&copy; 2014 Instagram</p>
+  </div>
   </footer>
 </body>
 </html>
