--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="part1">
+    <img src="../starter-code/images/brand.png" alt="Instagram">
+    <a href=""><i class="fas fa-home"></i> Log in</a>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="part2">
+    <img class="phones" src="../starter-code/images/phones.png" alt="phones">
+    
+    <div class="frame">
+      <h2>Capture and Share <br>
+         the World's Moments</h2>
+      <article><p>Instagram is a fast, beautiful and fun way to share your life <br> 
+        with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+          <p>Take a picture or video, choose a filter to transform its look <br> 
+            and feel, then post to Instagram &mdash; it's that easy. You can <br> 
+            even share to Facebook, Twitter, Tumblr and more. It's a <br>
+            new way to see the world.</p>
+        
+          <p>Oh yeah, did we mention it's free?</p>
+      </article>
+    </div>
+   <a class="apple" href="#"> <img src="../starter-code/images/badge-iphone.png" alt="App Store"> </a>
+   <a class="android" href="#"> <img src="../starter-code/images/badge-android.png" alt="Google Play"> </a>
+   <nav class="footer">
+     <a href="#">About Us</a>
+     <a href="#">Support</a>
+     <a href="#">Blog</a>
+     <a href="#">Press</a>
+     <a href="#">API</a>
+     <a href="#">Jobs</a>
+     <a href="#">Privacy</a>
+     <a href="#">Terms</a>
+     <span>&copy; 2014 Instagram</span>
+   </nav>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
