--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="seccion1">
+    
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="seccion2">
+    <section class="imagen-telefonos">
+      <img src="./images/phones.png" alt="phones picture">
+    </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <section class="insta">
+      <img src="./images/brand.png" alt="">
+      <button class="boton"><img src="./images/home.png"> Log in </button>
+    </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <section class="contenido">
+    <h2>Capture and Share the World's Moments</h2>
+      <p>
+        Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+        <br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br>
+        Oh yeah, did we mention it's free?
+        
+      </p>
+    <img src="./images/badge-iphone.png" alt="iphone picture">
+    <img src="./images/badge-android.png" alt="android picture">
+  </section> 
+  <nav class="links">
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>  
+    <span class="copyright">&copy; 2014 Instagram</span>
+    </nav>
+  </div>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  
+  
 </body>
 </html>
