copia de instagram

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
+
 <body>
-  Instagram
+    <div class="encabezado">
+        <img src="images/brand.png" alt="logo y nombre de pagina" title="Instagram">
 
-  Capture and Share the World's Moments
+        <button class="log">Log in</button>
+        <img src="images/home.png" alt="init" title="Volver a inicio" class="home">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <div class="moviles">
+        <img src="images/phones.png" alt="foto de moviles" title="Iphone">
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="white">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <div class="text">
+            <h2>Capture and Share <br>the World's Moments</h2>
 
-  &copy; 2014 Instagram
+            <p>Instagram is a, <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention It's free?</p>
+
+            <img src="images/badge-android.png" alt="botones para descargar android" title="Descarga de Android">
+            <img src="images/badge-iphone.png" alt="botones para descargar apple" title="Descarga de Apple">
+        </div>
+
+    </div>
+
+    <footer class="important">
+        <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>&copy; 2014 Instagram</li>
+        </ul>
+
+
+
+    </footer>
 </body>
+
 </html>
