--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link href="css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header class="upper-half">
+    <div class="logos-box">
+      <img class="logos-img" src="../starter-code/images/brand.png" alt="Instragram Logo and Name">
+      <a class="login-box" href="#"> <img class="logos-img" src="../starter-code/images/home.png" alt="Home Logo"><p class="login-text">Log in</p></a>
+    </div>
+  </header>
+  <div class="phones">
+    <img src="../starter-code/images/phones.png" alt="Phones Image">
+  </div>
+  <div class="main-box">
+    <h1> Capture and Share the World's Moments</h1>
+    <p class="main-text">Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+    <p class="main-text">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p class="main-text">Oh yeah, did we mention it's free?</p>
+    <img class="apple-store-img" src="../starter-code/images/badge-iphone.png" alt="App Store Image">
+    <img class="google-store-img" src="../starter-code/images/badge-android.png" alt="Google Play Image">
+  </div>
+  <footer>
+    <ul class="footer-links">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li class="copyright-text" >&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
