--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+
+  <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
-  Instagram
+<div class="encabezado">
+  <img src="images/brand.png" alt="logo y nombre de pagina" >
+</div>
+<div>
+  <button>Log in</button>
+  <img class="casita" src="images/home.png" >
+</div>
+<div class="moviles">
+    <img src="images/phones.png" alt="foto de moviles" >
+</div>
 
-  Capture and Share the World's Moments
+<div class="blanco">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="contenido">
+  <h2>Capture and Share <br>the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a, <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+<br><br><br>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <img src="images/badge-android.png" alt="botones para descargar android" >
+  <img src="images/badge-iphone.png" alt="botones para descargar apple" >
+</div>
 
-  &copy; 2014 Instagram
+</div>
+
+<footer class="piePagina">
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li> 
+    <li>&copy; 2014 Instagram</li>
+</ul>
+
+
+
+</footer>  
 </body>
 </html>
