--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  Instagram
+ <!-- Phones -->
 
-  Capture and Share the World's Moments
+  <div class="img-phones">
+    <img src="./images/phones.png" alt="Instagram-phones">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <section>
+ <!-- Header -->
+ <div class="header">
+   <img src="./images/brand.png" alt="Instagram-logo">
+   <button type="button" name="Log-in-button"><img src="./images/home.png"><p>Log In</p></button>
 
-  Oh yeah, did we mention it's free?
+ </div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+ <!--Box text-->
+ <div class="whiteBox">
+  <h1>Capture and Share </br>
+    the World's Moments</h1>
 
-  &copy; 2014 Instagram
+  <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+  <p>Oh yeah, did we mention it's free?</p>
+</div>
+
+  <div class="downloadButtons">
+      <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store" /></a>
+      <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play" /></a>
+  </div>
+</section>
+
+
+  <!-- Footer -->
+  <footer class="footer">
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+    
+      &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
