--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,61 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+</header>
 
-  Download on the App Store
-  Get it on Google Play
+<section>
+<div class="content">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div class="box-1">  
+    <img src="images/phones.png">
+  </div>
+  
 
-  &copy; 2014 Instagram
+    <div class="box-2"> 
+      <div>
+      <img src="images/brand.png">
+      </div>
+      <div class="box-2-text">     
+      <p>Capture and Share the World's Moments</p>
+
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+
+      <p></p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+      <p>Oh yeah, did we mention it's free?</p>
+
+      <img src="images/badge-iphone.png" alt="Download on the App Store">
+      
+      <img src="images/badge-android.png" alt="Get it on Google Play">
+      </div>
+      
+    </div>  
+
+</div>
+</section>
+
+  <footer>
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    <span> 2014 Instagram</span>
+</footer>
+
+  
 </body>
 </html>
