--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+  <title>
+    Instagram
+  </title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="fondo">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <img src="images/phones.png" class="phones">
+    <img src="images/frame.png" class="frame">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="side-info">
+      <img src="images/brand.png" class = "brand">
+      <button>
+        <img src = "images/home.png">
+        Log In
+      </button>
+      <h1>Capture and Share the World's Moments</h1>
 
-  Oh yeah, did we mention it's free?
+      <p>Instagram is a <b>fast,</b> <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p> Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </div>
+
+    <footer> <b>About Us   Support   Blog   Press  
+       API   Jobs   Privacy  Terms &copy; 2014 </b>
+    
+    </footer>
+
+  </div>
 </body>
+
 </html>
