--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,31 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+  <section class="fondo">
+    <img src="images/brand.png" alt="logo">
+    <button>
+      <i> <img src="images/home.png" > </i>
+      <span>Log In</span>
+    </button>
+  </section>
+  <div class="telefonos">
+    <img src="images/phones.png" alt="phones">
+  </div>
+  <section class="card">
+    <h1><b>Capture and Share the World's Moments</b></h1>
+      <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+         Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+         Oh yeah, did we mention it's free?
+      </p>
+  <img src="images/badge-iphone.png" alt="appstore">
+  <img src="images/badge-android.png" alt="playstore">
+  </section>
+  <div class="footer">
   About Us
   Support
   Blog
@@ -25,7 +35,7 @@
   Jobs
   Privacy
   Terms
-
   &copy; 2014 Instagram
+</div>
 </body>
 </html>
