missing media queries

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="banner">
 
-  Capture and Share the World's Moments
+    <div id="instacam">
+      <img src="./images/brand.png" alt="instacam">
+    </div>
+    <div id="home">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div id="home-text"><button> <img src="./images/home.png" alt="logIn"><b>Log In</b></button></div>
+    </div>
+  </div>
+  <div id="phone">
+    <img src="./images/phones.png" alt="phones">
+  </div>
+  <div id="description">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div id="description-text">
+      <h2>Capture and Share the World's Moments </h2>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>Take
+        a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br> Oh yeah, did we
+        mention it's free?<br><br>
+      </p>
 
-  Oh yeah, did we mention it's free?
+      <img src="./images/badge-iphone.png" alt="appleStore">
+      <img src="./images/badge-android.png" alt="playStore">
 
-  Download on the App Store
-  Get it on Google Play
+    </div>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
-</body>
-</html>
+  <footer>
+    <b>ABOUT US SUPPORT BLOG PRESS API JOBS PRIVACY TERMS JOBS PRIVACY TERMS &copy; 2014 INSTAGRAM<b>
+  </footer>
