--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section>
+    <div class="telefono">
+      <img src="images/phones.png" alt="">
+    </div>
+    <div class="marca">
+      <img src="images/brand.png" alt="">
+    </div>
+    <div class="button">
+      <button>
+        <img src="images/home.png" alt="">
+        <span>log in</span>
+      </button>
+    </div>
+    <div class="text-box">
+        <article class="info">
+          <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, 
+                    then post to Instagram &mdash; it's that easy. 
+                    You can even share to Facebook, Twitter, Tumblr and more. 
+                    It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+        </article>
+        <article class="marcas">
+          <img src="images/badge-iphone.png" alt="">
+          <img src="images/badge-android.png" alt="">
+        </article>
+    </div>
+    <div class="footer">
+        <a href="#">About Us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <span>&copy;2014 Instagram</span>
+    </div>
+  </section>
 </body>
 </html>
