metemos los elementos del footer en un div para poder centrarlos y añadimos la imagen al boton de login

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,7 +8,7 @@
   <img id="img-side" src="./images/phones.png" alt="Phones">
   <header>
     <img id="logo" src="./images/brand.png" alt="Instagram Logo">
-    <button>Log in</button>
+    <button><img src="./images/home.png" alt="Home logo"> Log in</button>
   </header>
   <main>
     <h1>Capture and Share the World's Moments</h1>
@@ -17,20 +17,21 @@
     <p>Oh yeah, did we mention it's free?</p>
     <button id="app-store"></button>
     <button id="google-play"></button>
-    Download on the App Store
-    Get it on Google Play
   </main>  
-<footer></footer>
-  <ul>
-    <li>About Us</li>
-    <li>Support</li>
-    <li>Blog</li>
-    <li>Press</li>
-    <li>API</li>
-    <li>Jobs</li>
-    <li>Privacy</li>
-    <li>Terms</li>
-  </ul>
-<span> &copy; 2014 Instagram</span>
+<footer>
+  <div class="wrap">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    <span> &copy; 2014 Instagram</span>
+  </div>
+</footer>
 </body>
 </html>
