--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section id="blue">
+    <div>
+        <img class="iphone" src="images/phones.png" alt="phones">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <img src="images/brand.png" alt="brand" class="brand">
+        <button>
+          <i><img src="images/home.png" alt="home"></i>
+          <span>Log in</span>
+        </button>
+    </div>
+  </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <section id="white" >    
+    <section class="recuadro">
+        <h1>Capture and Share <br/>the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b> beautiful</b> and 
+        <b>fun</b> way to share your life with friends and family.
+        <br/>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br/>
+        Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+        <img src="images/badge-iphone.png" alt="iphone">
+        <img src="images/badge-android.png" alt="android">
+    </section>      
+  </section>
 
-  Download on the App Store
-  Get it on Google Play
+  <footer>
+    <a>About Us</a>
+    <a>Support</a>
+    <a>Blog</a>
+    <a>Press</a>
+    <a>API</a>
+    <a>Jobs</a>
+    <a>Privacy</a>
+    <a>Terms</a>
+    <span>&copy; 2014 Instagram</span> 
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
