--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="main">
+    <div class="container">
+      <div class="phone-img">
+        <img src="./images/phones.png" alt="">
+      </div>
+      <div class="brand-title">
+        <img src="./images/brand.png" alt="">
+      </div>
+      <div class="button-login"> <a href=""> <img src="./images/home.png" alt="">Log in </a></div>
+        <article class="article-description">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            </p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            
+                Oh yeah, did we mention it's free?</p>
+            <div class="phone-brand">
+              <a href=""><img src="./images/badge-iphone.png" alt=""></a>
+              <a href=""><img src="./images/badge-android.png" alt=""></a> 
+            </div> 
+        </article>     
+        <div class="footer">
+          <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li> <span> &copy; 2014 Instagram </span></li>
+          </ul>
+          
+        </div>
+    </div>
+  </section>
+  
 </body>
 </html>
