--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,7 +9,11 @@
 <div>
   <img class="phones" src="images/phones.png">
 </div>
+<div>
 <img src="images/brand.png" class="insta">
+<img class="home" src="images/home.png">
+<button type="button" class="log-in">Log In</button>
+</div>
 <div class="text">
   <div class="div-capt">
   <h1 class="capt">Capture and Share the World's Moments</h1>
@@ -22,22 +26,24 @@
   <p>Oh yeah, did we mention it's free?</p>
   </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <img class="iphone" src="images/badge-iphone.png" alt="boton iphone">
+  <img class="android" src="images/badge-android.png" alt="boton android">
 
   </div>
 
   <div class="footer">
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <ul class="list">
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li class="number">2014 Instagram</li>
+  </ul>
 
-  &copy; 2014 Instagram
   </div>
 </body>
 </html>
