por lo menos la maquetacion estar, está...que desastre completo lo mio con css

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+    <head>
+      <title>Instagram</title>
+       <style type="text/css" src="main.css"></style>
+     </head>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <body>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="back">
 
-  Oh yeah, did we mention it's free?
+     <div id="phone">
+       <img src="./images/phones.png" alt="hones" tittle="iphones">
+            
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="main-container-box">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <div class="icons-title-box">
+      <img src="./images/brand.png">
+      <a href="./images/home.png" class="button">Log in</a> 
+    </div>
+  
 
-  &copy; 2014 Instagram
-</body>
+
+    <div class="portrait">
+  
+      <h1>Capture and Share the World's Moments</h1>
+  
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+      <p>Oh yeah, did we mention it's free?</p>
+       <div class="icons-bottom">
+      <a href="./images/badge-android.png"></a>
+      <a href="./images/badge-iphone"></a>
+    </div>
+   </div>
+ </div>
+</div>
+</div>
+
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+         
+     </ul>
+     <p>&copy; 2014 Instagram</p>
+  
+ </footer>
+ </body>
 </html>
