--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="background">
+  </div>
+  
+  <div class="main-contain">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="phones">
+      <img src="images/phones.png" alt="iPhones">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="text-contain">
+      <div class="header">
+        <img src="images/brand.png" alt="instagram brand image">
+          <div class="button">
+            <img src="images/home.png" alt="log in home sign">
+            <button>Sign In</button>
+          </div>
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class="clearfix">
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="description">
+      <h2>Capture and Share the World's Moments</h2>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <br><br>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br><br>
+      Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
+      <button>Download on the App Store</button>
+      <button>Get it on Google Play</button>
+      </div>
+      </div>
+    </div>
+
+    <div class="clearfix">
+    </div>
+
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+
 </body>
 </html>
