--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="header">
+  <img src="images/brand.png" alt="brand" class="brand">
+  <img src="images/phones.png" alt="phones" class="phones">
+  <div class="login">
+    <img src="images/home.png" alt="home" class="home">
+    <p>Log in</p></div>
+  </div>
+  
 
-  Capture and Share the World's Moments
+<div class="text-images">
+  <img src="images/frame.png" alt="frame" class="frame">
+  <img src="images/badge-android.png" alt="android" class="android" >
+  <img src="images/badge-iphone.png" alt="iphone" class="iphone"></div>
+  <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="text"><p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
+<div class="footer">
+  <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li class="date">&copy; 2014 Instagram</li></ul></div>
 </body>
 </html>
