[MAD DE] Celia Arnelas
No me dio tiempo a terminar todo, se nos alargó el ejercicio de parejas. En cuanto tenga tiempo (espero que el fin de semana) lo modificaré para que quede como tenga que quedar.
Me dio bastantes problemas situar el logo que lleva el texto de "instagram", se quedaba continuamente abajo y no me apañé para colocarlo arriba correctamente. He terminado superponiéndolo y pegándolo arriba a la derecha pero está bastante mal.
Se me hizo más dificil que el ejercicio anterior, pero creo que fue sobretodo por falta de tiempo.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+    <div class="header-background">Instagram</div></header>
 
-  Capture and Share the World's Moments
+  <section class="fixed-main">
+   <div class="main-box">
+      <div class="insta-logo">
+          <img src="images/brand.png" alt="logo">
+        </div>
+    <div class="phone-photo">
+      <img src="images/phones.png" alt="phone running instagram"></div>
+       
+        <div class="main-text">
+    <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div class="button">Download on the App Store</div>
+  <div class="button">Get it on Google Play</div>
+</div>
+</div>
+</section>
+<footer class="clearfix">
+  <nav>
+      <a href="#" about us</a>
+      <a href="#" support</a>
+      <a href="#" blog</a>
+      <a href="#" press</a>
+      <a href="#" api</a>
+      <a href="#" jobs</a>
+      <a href="#" privacy</a>
+      <a href="#" terms</a>
 
   &copy; 2014 Instagram
+  </nav>
+</footer>
+
 </body>
 </html>
