--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,22 +11,33 @@
         <img id="phones" src="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/phones.png" alt="phones">
       </div>
       <div class="right-side-container">
-        <img src="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram">
-
+        <img id="instagram" src="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram">
+        <button><span><img src="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/home.png" alt="home"></span>Sign in</button>
         <div class="text">
           <h1> Capture and Share the World's Moments</h1>
-          <p> Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
               Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
             
               Oh yeah, did we mention it's free?
             </p>
-          <img src="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="googleplay">
-          <img src="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="appstore">
+          <img  id="googleplay" src="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="googleplay">
+          <img  id="applestore" src="/home/rickalon/Desktop/IH/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="appstore">
         </div>
     </div>
   </div>
+  <footer>About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+  
+    &copy; 2014 Instagram</footer>
 </div>
+
   
 
 
