--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,14 +11,14 @@
   </div>
   <div class="instagram-logo">
     <img class="instagram-image" src="./images/brand.png" alt="instagram-image"/>
-    <button class="login-button"><img src="./images/home.png">Log in</button>
+    <button class="login-button"><img src="./images/home.png" class="login-image">Log in</button>
   </div>
   <!--Instagram description, slogan, etc..(mostly formatted text)-->
   <div class="instagram-description">
     <div class="instagram-text">
       <h2 class="instagram-slogan">Capture and Share the World's Moments </h2>
       <div class="container">
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
       </div>
