--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="blue-background">
+      <img src="images/bgtile.png" alt="">   
+    </div> 
 
-  Capture and Share the World's Moments
+    <div id="phones">
+      <img src="images/phones.png" alt="Instagram for phones">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div id="text">
+      <img src="images/brand.png" alt="">
+      <h3>Capture and Share the World's Moments</h3>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p>
+    </div>
+    <div id="app-links">
+      <img src="images/badge-iphone.png" alt="Download on the App Store">
+      <img src="images/badge-android.png" alt="Get it on Google Play">
+    </div>
+  </div>
+    
+  <footer>
+    <ul id="footer-links">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    <p class="copyright">&copy; 2014 Instagram </p>
+  </footer>    
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
 </body>
 </html>
