promise its the last one

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -26,8 +26,10 @@
         </div>
       </div>
       <!--Are we on iOS or Android?-->
-      <div class="google"> <img class="android-image" src="./images/badge-android.png" alt="android-image"/></div>
-      <div class="ios"> <img class="ios-image" src="./images/badge-iphone.png" alt="ios-image"/></div>
+      <div class="user-platform">
+        <div class="google"> <img class="android-image" src="./images/badge-android.png" alt="android-image"/></div>
+        <div class="ios"> <img class="ios-image" src="./images/badge-iphone.png" alt="ios-image"/></div>
+      </div>
     </div>
     </div>
   <!--Footer (Links and copytight (i couldnt get it to work)-->
