--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href ="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blue-box"> 
+    <div id="Instagram"><img alt="Instagram-logo" src="images/brand.png">
+    <input type="button" borde=><img alt="home" src="images/home.png"><span>Log in</span>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="mobile-phones">
+      <div id="mobile"><img alt="mobile-phones" src="images/phones.png">
+  </div>
+
+  <div class="text-box">
+    <h2>Capture and Share the World's Moments</h2>
+
+  <span>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</span>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="app-logo">
+    <img src="images/badge-iphone.png">
+  </div>
+  
+  <div class="play-logo">
+    <img src="images/badge-android.png">
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</div>
+<nav>
+  <div class="links-box">
+      <a href="#">About Us</a> 
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy></a>
+      <a href="#">Terms</a>
+  </div>
+</nav>
 
-  &copy; 2014 Instagram
+<footer>
+&copy; <b>2014 Instagram</b>
+</footer>
+
+
 </body>
 </html>
