--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
-test
 <body>
-  Instagram
+<div class="header">
+  <div class="brand"> </div>
+</div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class= "text"> 
+    <h1 class="text">Capture and Share the World's Moments</h1>
+      <p class="text">Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p>
+  </div>
+
 
   Download on the App Store
   Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+    <ul>
+      <li class="nav-bar-li">About Us</li>
+      <li class="nav-bar-li">Support</li>
+      <li class="nav-bar-li">Blog</li>
+      <li class="nav-bar-li">Press</li>
+      <li class="nav-bar-li">API</li>
+      <li class="nav-bar-li">Jobs</li>
+      <li class="nav-bar-li">Privacy</li>
+      <li class="nav-bar-li">Terms</li>
+    </ul>
 
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
