--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,42 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="container">
+    <div class="phones">
+       <img src="images/phones.png" alt="phones">
+    </div>
+    <div class="logo">
+        <img src="images/brand.png" alt="instagram">
+    </div>
+    <div class="information">
+      
+      <div class="text">
+        <h2>Capture and Share the World's Moments</h2>
+         <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's 
+           that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>  
+         <p>Oh yeah, did we mention it's free?</p>
+      </div>
+    </div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="footer">
+    About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+    
+      &copy; 2014 Instagram
+  </div>
+  
 </body>
 </html>
