--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,7 +17,7 @@
                 <img src="./images/brand.png" alt="Instagram">
             </div>
             <div class="login-button">
-                <button type="button"><img class="home-icon" src="./images/home.png" alt="home">Log In</button>
+                <a href="something" class="button" style="background-color:#2979FF"><img class="home-icon" src="./images/home.png" alt="home">Log In</a>
             </div>
             <div class="clearfix"></div>
         </section>
