no logre terminar por tema personal

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,11 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
 <body>
+  <div class="header">
+    prueba
+  </div>
+  
+   
+  <div>
+    <img src="../starter-code/images/badge-android.png" alt="android phone">
+  </div>
+
+  <div>
+    <img src="../starter-code/images/badge-iphone.png" alt="iphone phone">
+  </div>
+
+  <div>
+    <img src="../starter-code/images/bgtile.png" alt="bgtitle">
+  </div>
+
+  <div>
+    <img src="../starter-code/images/brand.png" alt="brand">
+  </div>
+
+  <div>
+    <img src="../starter-code/images/frame.png" alt="frame">
+  </div>
+
+  <div>
+    <img src="../starter-code/images/home.png" alt="home">
+  </div>
+
+  <div>
+    <img src="../starter-code/images/phones.png" alt="phone generic" >
+  </div>
+
+  <span class="plain-text">
   Instagram
 
-  Capture and Share the World's Moments
+  <h1>Capture and Share the World's Moments</h1>
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
@@ -16,7 +51,9 @@
 
   Download on the App Store
   Get it on Google Play
+  </span>
 
+  <footer>
   About Us
   Support
   Blog
@@ -25,7 +62,7 @@
   Jobs
   Privacy
   Terms
-
+  </footer>
   &copy; 2014 Instagram
 </body>
 </html>
