--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Instagram</title>
+  </head>
 <body>
-  Instagram
+  <header>
+    
+  </header>
+ 
+  <section id="family">
+  <article class="phone">
+<img src="images/phones.png">
+ </article>
+<article class="text">
+<div>
+<img src="images/brand.png">
+<a href="#" class="link-btn" style="background:rgb(203, 56, 55)"><img src="images/home.png">Log in</a>
+</div>
+<div>
+  <img style="position:relative" src="images/frame.png"></div>
+  <div>
+<h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p>
+</div>
+<div>
+  <img src="images/badge-iphone.png">
+  <img src="images/badge-android.png">
 
-  Download on the App Store
-  Get it on Google Play
+</div>
+</article>
+</section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+ <section class="down">
+   <a href="#">About Us</a> 
+   <a href="#">Support</a>
+   <a href="#">Blog</a>
+   <a href="#">Press</a>
+   <a href="#">vAPI</a>
+   <a href="#">Jobs</a>
+   <a href="#">Privacy</a>
+   <a href="#">Terms</a>
+  
+   <a href="#">&copy; 2014 Instagram</a>
+ </section>
 </body>
 </html>
