--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section class="unique-section">
+    <div class="section_column section_column_left">
+      <img src="images/phones.png" alt="phones">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="section_column section_column_right">
+      <div class="section_header">
+        <img src="images/brand.png" alt="brand">
+        <button type="button"><span class="login_butt">Log in</span></button>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="main_text">
+        <h1 class="main_title">Capture and Share <br> the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class="download_img">
+        <a href="#"><img class="d_img d_img_iphone" src="images/badge-iphone.png" alt="Apple Store button"></a>
+        <a href="#"><img class="d_img d_img_android" src="images/badge-android.png" alt="Google Play button"></a>
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+    </div>
+  </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+    <ul class="menu_items">
+      <li class="menu_item menu_item01"><a href="#">About Us</a></li>
+      <li class="menu_item menu_item02"><a href="#">Support</a></li>
+      <li class="menu_item menu_item03"><a href="#">Blog</a></li>
+      <li class="menu_item menu_item04"><a href="#">Press</a></li>
+      <li class="menu_item menu_item05"><a href="#">API</a></li>
+      <li class="menu_item menu_item06"><a href="#">Jobs</a></li>
+      <li class="menu_item menu_item07"><a href="#">Privacy</a></li>
+      <li class="menu_item menu_item08"><a href="#">Terms</a></li>
+      <li class="menu_item menu_item09"><a class="copyright" href="#">&copy; 2014 Instagram</a></li>
+    </ul>
+  </footer>
 
-  &copy; 2014 Instagram
 </body>
 </html>
